--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "npx prettier '**/*.{ts,tsx,json}' --write"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
