--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,5 @@
-{ "singleQuote": true, "jsxSingleQuote": true }
+{
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "plugins": ["prettier-plugin-tailwindcss"]
+}
